--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -8,50 +8,36 @@ body {
   height: 100vh;
   margin: 0;
   padding: 2rem;
-  font-family: $font-family-sans-serif;
+  font-family: $font-family;
   font-size: 16px;
   line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+  background-color: $bg;
+  color: $highlightcolor;
 }
 
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-}
 
-.uoc-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
-
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
-  }
-}
-
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
-
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
-  }
-}
-
-.uoc-footer {
+.footer {
   margin-top: 1.5rem;
   font-size: 0.75rem;
   text-align: center;
+}
+
+.header {
+  margin-top: 1rem;
+  text-align: center;
+  img {
+    width: 50%;
+  }
+}
+
+.cards {
+  text-align: center;
+  .title {
+    margin-bottom: 5%;
+  }
+  img {
+    width: 50%;
+
+
+  }
 }
