--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,3 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer class="footer">
+    &copy; Bego Carrasco González
 </footer>
