Big update of scss, creation of partials and almost final version of the web

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,8 +1,6 @@
 @use "sass:color";
 
-$font-family: 'Open Sans', sans-serif;
+$font-family: 'Cormorant Garamond', serif;
 
 $highlightcolor: #6186b1;
 $bg: #ECDFDB;
-
-$mqMinWidth: 420px;
