--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,6 +2,7 @@
  * Use this file to import partials.
  * Do not include SCSS code in this file.
  */
+ @import "_header-footer";
 
 /**
  * Import variables
@@ -14,10 +15,11 @@
  * see: https://v2.parceljs.org/features/module-resolution/
  * see commented examples below
  */
-@import "npm:@fortawesome/fontawesome-free/css/all.css";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Tilt+Neon&display=swap');
-// @import "some-node-module";
-// @import "@some-company/some-node-module";
+@import url("npm:@fortawesome/fontawesome-free/css/all.css");
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Dancing+Script&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Tilt+Neon&display=swap');
+/** @import "some-node-module";
+* @import "@some-company/some-node-module";
+*/
 
 /**
  * Import layouts
@@ -25,6 +27,7 @@
  */
 
 @import "layouts/home";
+
 
 /**
  * Do NOT include anything else in this file!
