Update to comply with style guide and methodology

--- a/src/assets/styles/_header-footer.scss
+++ b/src/assets/styles/_header-footer.scss
@@ -1,26 +1,21 @@
-.footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
-  text-align: center;
-}
-
 .header {
+  text-align: center;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  text-align: center;
 
   img {
     height: 150px;
     width: auto;
   }
-
 }
-
-
 
 @media (width <= 1280) {
-  .header {
-    margin-bottom: 0.25rem;
-  
-  }
+  .header { margin-bottom: .25rem; }
 }
+
+.footer {
+  text-align: center;
+  margin-top: 1.5rem;
+  font-size: 0.75rem;
+}
+
