--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,5 +2,5 @@
 
 $font-family: 'Cormorant Garamond', serif;
 
-$highlightcolor: #6186b1;
-$bg: #ECDFDB;
+$highlightcolor: rgb(97 134 177);
+$bg: rgb(236 223 219);
