--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -14,46 +14,40 @@ body {
   line-height: 24px;
   background-color: $bg;
   color: $highlightcolor;
-    
+
   p {
-    color: black;
     text-align: center;
+    color: black;
     margin-bottom: 15px;
   }
-
 }
 
- 
 .introduction {
-  margin-bottom: 10px;
   text-align: center;
-  
-  i {
-    color: $highlightcolor;
-  }
-}
- 
-.cards {
-  display:flex;
-  flex-direction:column;
+  margin-bottom: 10px;
 
-  .category {
-    font-style: italic;
-  }
+  i { color: $highlightcolor; }
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+
+  .category { font-style: italic; }
 
   .card {
-    margin-bottom: 30px;
     text-align: center;
+    margin-bottom: 30px;
     box-shadow: 2px 2px 8px 4px #d3d3d3d1;
-    border-radius:15px;
+    border-radius: 15px;
   }
-   
+
   .title {
     margin-top: 5%;
     margin-bottom: 5%;
     font-size: larger;
   }
-   
+
   img {
     width: 50%;
     height: auto;
@@ -61,32 +55,31 @@ body {
   }
 
   .summary {
+    text-align: center;
     background: $highlightcolor;
-    border-radius:0 0 15px 15px;
+    border-radius: 0 0 15px 15px;
     margin-top: 1rem;
     padding: 10px;
-    text-align:center;
   }
 
   a {
     text-decoration: none;
     color: white;
   }
-   
+
   a::after {
     position: absolute;
     inset: 0;
     z-index: 1;
-   }
-
+  }
 }
 
 @media (width >= 1280px) {
   .cards {
-   flex-flow: row wrap;
-   justify-content: space-between;
+    flex-flow: row wrap;
+    justify-content: space-between;
   }
-  
+
   .card {
     width: calc(16.666% - 10px);
     flex-direction: column;
@@ -95,21 +88,17 @@ body {
       width: auto;
       height: 200px;
     }
-    
+
     .title {
-      font-size: 17px;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 40px;
       margin: 10px 10px 30px;
+      font-size: 17px;
     }
 
-    .summary {
-      height: 40px;
-    }
-    
-
+    .summary { height: 40px; }
   }
 }
 
@@ -117,9 +106,9 @@ body {
   .cards {
     flex-flow: row wrap;
     justify-content: space-between;
-   }
-  
-   .card {
+  }
+
+  .card {
     width: calc(30% - 10px);
     flex-direction: column;
 
@@ -127,22 +116,16 @@ body {
       width: auto;
       height: 200px;
     }
-    
+
     .title {
-      font-size: 17px;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 80px;
       margin: 10px 10px 30px;
+      font-size: 17px;
     }
 
-    .summary {
-      height: 40px;
-    }
-    
-
+    .summary { height: 40px; }
   }
-   
-   
 }
